added plot_prop_char_muts function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(call_mutations)
 export(get_codons)
 export(id_indels)
 export(id_snps)
+export(plot_prop_charac_muts)
 export(use_pipe)
 export(write_ODH_table)
+import(ggplot2)
 importFrom(magrittr,"%>%")
